--- a/test/src/app/app.component.html
+++ b/test/src/app/app.component.html
@@ -1,8 +1,1 @@
-
-    <button mat-button color="primary">Primary</button>
-
-    <br>
-
-    <button mat-icon-button>
-      <mat-icon>camera_enhance</mat-icon>
-    </button>
+<router-outlet></router-outlet>
