step 8  signup form

--- a/test/src/app/auth/signup/signup.component.html
+++ b/test/src/app/auth/signup/signup.component.html
@@ -1,1 +1,10 @@
-<p>signup works!</p>
+<section style="background-color:rgb(52, 228, 52);">
+    <form>
+        <mat-form-field>
+            <input type="email" matInput placeholder="Your email">
+        </mat-form-field>
+        <mat-form-field>
+            <input type="password" matInput placeholder="Your password">
+        </mat-form-field>
+    </form>
+</section>
