step 9 Flex example

--- a/test/src/app/auth/signup/signup.component.html
+++ b/test/src/app/auth/signup/signup.component.html
@@ -1,10 +1,18 @@
-<section style="background-color:rgb(52, 228, 52);">
+<section id='testSec'>
     <form>
-        <mat-form-field>
+        <mat-form-field id="emailField">
             <input type="email" matInput placeholder="Your email">
         </mat-form-field>
         <mat-form-field>
             <input type="password" matInput placeholder="Your password">
         </mat-form-field>
     </form>
+</section>
+
+<br>
+
+<section id="container">
+    <div id="child1" class="child"></div>
+    <div id="child2" class="child"></div>
+    <div id="child3" class="child"></div>
 </section>
