step 10 layout signup page with flex-layout

--- a/test/src/app/auth/signup/signup.component.html
+++ b/test/src/app/auth/signup/signup.component.html
@@ -1,5 +1,5 @@
-<section id='testSec'>
-    <form>
+<section id='testSec' class="signup-form">
+    <form fxLayout="column" fxLayoutAlign="center center">
         <mat-form-field id="emailField">
             <input type="email" matInput placeholder="Your email">
         </mat-form-field>
@@ -9,10 +9,3 @@
     </form>
 </section>
 
-<br>
-
-<section id="container">
-    <div id="child1" class="child"></div>
-    <div id="child2" class="child"></div>
-    <div id="child3" class="child"></div>
-</section>
