--- a/test/src/app/auth/signup/signup.component.css
+++ b/test/src/app/auth/signup/signup.component.css
@@ -2,29 +2,10 @@
     background-color:rgb(213, 52, 228);
 }
 
-#container{
-    display: flex;
-    width: 100%;
-    height: 500px;
-    border: 1px solid black;
-    /* flex-direction: column; */
-    justify-content: center;
-    align-items: center
-}
+/* .signup-form{
+    width: 300px;
+} */
 
-.child {
-    /* width: 200px; */
-    height: 200px;
-    flex: 1;
-}
-
-#child1{
-    background-color: red;
-    flex: 2;
-}
-#child2{
-    background-color: yellow;
-}
-#child3{
-    background-color: green;
+mat-form-field{
+    width: 300px;
 }
