--- a/test/src/app/auth/signup/signup.component.html
+++ b/test/src/app/auth/signup/signup.component.html
@@ -1,10 +1,16 @@
 <section id='testSec' class="signup-form">
     <form fxLayout="column" fxLayoutAlign="center center" #f="ngForm" (ngSubmit)="onSubmit(f)">
-        <mat-form-field id="emailField">
-            <input type="email" matInput placeholder="Your email" ngModel name="email">
+        <mat-form-field id="emailField" hintLabel="Must be email format">
+            <input type="email" matInput placeholder="Your email" ngModel name="email"
+            email required #emailInput="ngModel">
+            <!-- <mat-hint>Must be email format</mat-hint> -->
+            <mat-error *ngIf="emailInput.hasError('required')">Email is invalid</mat-error>
+            <mat-error>Can have error msg more than 1 line</mat-error> 
         </mat-form-field>
-        <mat-form-field>
-            <input type="password" matInput placeholder="Your password" ngModel name="password">
+        <mat-form-field hintLabel="Should be at least 6 charactors long">
+            <input type="password" matInput placeholder="Your password" ngModel name="password"
+            required minlength="6" #pwInput="ngModel">
+            <mat-hint align="end"> {{ pwInput.value?.length }}/6</mat-hint>
         </mat-form-field>
         <button type="submit" mat-raised-button color="primary">Submit</button>
     </form>
