--- a/test/src/app/auth/signup/signup.component.html
+++ b/test/src/app/auth/signup/signup.component.html
@@ -12,6 +12,12 @@
             required minlength="6" #pwInput="ngModel">
             <mat-hint align="end"> {{ pwInput.value?.length }}/6</mat-hint>
         </mat-form-field>
+
+        <mat-form-field appearance="fill">
+            <input matInput placeholder="Your BirthDate" [matDatepicker]="picker">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
         <button type="submit" mat-raised-button color="primary">Submit</button>
     </form>
 </section>
