--- a/test/src/app/auth/signup/signup.component.html
+++ b/test/src/app/auth/signup/signup.component.html
@@ -14,10 +14,12 @@
         </mat-form-field>
 
         <mat-form-field appearance="fill">
-            <input matInput placeholder="Your BirthDate" [matDatepicker]="picker">
+            <input matInput placeholder="Your BirthDate" [matDatepicker]="picker"
+            [max]="maxDate">
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
+        
         <button type="submit" mat-raised-button color="primary">Submit</button>
     </form>
 </section>
