--- a/test/src/app/auth/signup/signup.component.html
+++ b/test/src/app/auth/signup/signup.component.html
@@ -1,5 +1,5 @@
 <section id='testSec' class="signup-form">
-    <form fxLayout="column" fxLayoutAlign="center center" #f="ngForm" (ngSubmit)="onSubmit(f)">
+    <form fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px" #f="ngForm" (ngSubmit)="onSubmit(f)">
         <mat-form-field id="emailField" hintLabel="Must be email format">
             <input type="email" matInput placeholder="Your email" ngModel name="email"
             email required #emailInput="ngModel">
@@ -23,11 +23,8 @@
         <mat-checkbox ngModel name="agree" required color="primary">
             Agree To Terms and Conditions.
         </mat-checkbox>
-        <mat-checkbox labelPosition="before">
-            Test Property.
-        </mat-checkbox>
 
-        <button type="submit" mat-raised-button color="primary">Submit</button>
+        <button type="submit" mat-raised-button color="primary" [disabled]="f.invalid">Submit</button>
     </form>
 </section>
 
