--- a/test/src/app/auth/login/login.component.html
+++ b/test/src/app/auth/login/login.component.html
@@ -1,1 +1,18 @@
-<p>login works!</p>
+<section id='testSec' class="signup-form">
+    <form fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px" #f="ngForm" (ngSubmit)="onSubmit(f)">
+        <mat-form-field id="emailField">
+            <input type="email" matInput placeholder="Your email" ngModel name="email"
+            email required #emailInput="ngModel">
+            <mat-error *ngIf="emailInput.hasError('required')">Email is invalid</mat-error> 
+        </mat-form-field>
+        <mat-form-field>
+            <input type="password" matInput placeholder="Your password" ngModel name="password"
+            required #pwInput="ngModel">
+            <mat-error *ngIf="emailInput.hasError('required')">Password is required</mat-error>
+        </mat-form-field>
+
+
+        <button type="submit" mat-raised-button color="primary" [disabled]="f.invalid">Submit</button>
+    </form>
+</section>
+
