--- a/test/src/app/app.component.html
+++ b/test/src/app/app.component.html
@@ -4,12 +4,16 @@
     </mat-sidenav>
     <mat-sidenav-content>
         <mat-toolbar color="primary">
-            <div><button (click)="onToggle()">Toggle Sidenav</button></div>
-            <div>LOGO</div>
-            <div>
-                <a routerLink="/signup">Signup</a>
-                <a routerLink="/login">Login</a>
-                <a routerLink="/training">Training</a>
+            <div><button mat-icon-button (click)="onToggle()">
+                <mat-icon>menu</mat-icon>
+            </button></div>
+            <div><a routerLink="/">LOGO</a></div>
+            <div fxFlex fxLayout fxLayoutAlign="end">
+                <ul fxLayout fxLayoutGap="10px" class="navigation-items">
+                    <li><a routerLink="/signup">Signup</a></li>
+                    <li><a routerLink="/login">Login</a></li>
+                    <li><a routerLink="/training">Training</a></li>
+                </ul>
             </div>
         </mat-toolbar>
         <main>
