--- a/test/src/app/app.component.html
+++ b/test/src/app/app.component.html
@@ -4,11 +4,13 @@
     </mat-sidenav>
     <mat-sidenav-content>
         <mat-toolbar color="primary">
-            <div><button mat-icon-button (click)="onToggle()">
+            <div fxHide.gt-xs>
+              <button mat-icon-button (click)="onToggle()">
                 <mat-icon>menu</mat-icon>
-            </button></div>
+              </button>
+            </div>
             <div><a routerLink="/">LOGO</a></div>
-            <div fxFlex fxLayout fxLayoutAlign="end">
+            <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
                 <ul fxLayout fxLayoutGap="10px" class="navigation-items">
                     <li><a routerLink="/signup">Signup</a></li>
                     <li><a routerLink="/login">Login</a></li>
