--- a/test/src/app/training/new-training/new-training.component.html
+++ b/test/src/app/training/new-training/new-training.component.html
@@ -1,10 +1,26 @@
 <section class="new-training" fxLayout fxLayoutAlign="center">
-    <mat-card fxFlex="400px">
-        <mat-card-title>Time To Start Workout!!!</mat-card-title>
-        <mat-card-content>
-            Select type of Training
+    <mat-card fxFlex.xs="100%" fxFlex="400px">
+        <mat-card-title fxLayoutAlign="center">Time To Start Workout!!!</mat-card-title>
+        <mat-card-content fxLayoutAlign="center">
+            <mat-form-field appearance="fill">
+                <mat-label>Select type of Training</mat-label>
+                <mat-select>
+                  <mat-option value="crunches">
+                    Crunches
+                  </mat-option>
+                  <mat-option value="touch-toes">
+                    Touch Toes
+                  </mat-option>
+                  <mat-option value="side-lunges">
+                    Side-lunges
+                  </mat-option>
+                  <mat-option value="burpees">
+                    Burpees
+                  </mat-option>
+                </mat-select>
+            </mat-form-field>
         </mat-card-content>
-        <mat-card-actions>
+        <mat-card-actions fxLayoutAlign="center">
             <button type="submit" mat-button>Start</button>
         </mat-card-actions>
     </mat-card>
