--- a/test/src/app/training/current-training/current-training.component.html
+++ b/test/src/app/training/current-training/current-training.component.html
@@ -1,1 +1,6 @@
-<p>current-training works!</p>
+<section class="current-training" fxLayout="column" fxLayoutAlign="center center">
+    <mat-progress-spinner mode="determinate" [value]="progress"></mat-progress-spinner>
+    <h1>Progress {{ progress}}%</h1>
+    <p>Keep on going</p>
+    <button mat-mat-raised-button color="accent">Stop</button>
+</section>
