--- a/test/src/app/training/current-training/current-training.component.html
+++ b/test/src/app/training/current-training/current-training.component.html
@@ -2,5 +2,5 @@
     <mat-progress-spinner mode="determinate" [value]="progress"></mat-progress-spinner>
     <h1>Progress {{ progress}}%</h1>
     <p>Keep on going</p>
-    <button mat-mat-raised-button color="accent">Stop</button>
+    <button mat-mat-raised-button color="accent" (click)="onStop()">Stop</button>
 </section>
