--- a/test/src/app/training/new-training/new-training.component.html
+++ b/test/src/app/training/new-training/new-training.component.html
@@ -6,7 +6,7 @@
                 <mat-form-field appearance="fill">
                     <mat-label>Select type of Training</mat-label>
                     <mat-select ngModel name="exerciseSelect" required>
-                    <mat-option *ngFor="let exercise of exercises | async" [value]="exercise.name">
+                    <mat-option *ngFor="let exercise of exercises | async" [value]="exercise.id">
                         {{ exercise.name }}
                     </mat-option>
                     </mat-select>
