--- a/test/src/app/auth/signup/signup.component.html
+++ b/test/src/app/auth/signup/signup.component.html
@@ -24,7 +24,8 @@
             Agree To Terms and Conditions.
         </mat-checkbox>
 
-        <button type="submit" mat-raised-button color="primary" [disabled]="f.invalid">Submit</button>
+        <button *ngIf="!isLoading" type="submit" mat-raised-button color="primary" [disabled]="f.invalid">Submit</button>
+        <mat-spinner *ngIf="isLoading"></mat-spinner>
     </form>
 </section>
 
