--- a/test/src/app/training/new-training/new-training.component.html
+++ b/test/src/app/training/new-training/new-training.component.html
@@ -3,7 +3,7 @@
       <mat-card fxFlex.xs="100%" fxFlex="400px">
           <mat-card-title fxLayoutAlign="center">Time To Start Workout!!!</mat-card-title>
           <mat-card-content fxLayoutAlign="center">
-              <mat-form-field appearance="fill">
+              <mat-form-field appearance="fill" *ngIf="!isLoading">
                   <mat-label>Select type of Training</mat-label>
                   <mat-select ngModel name="exerciseSelect" required>
                   <mat-option *ngFor="let exercise of exercises" [value]="exercise.id">
@@ -11,6 +11,7 @@
                   </mat-option>
                   </mat-select>
               </mat-form-field>
+              <mat-spinner *ngIf="isLoading"></mat-spinner>
           </mat-card-content>
           <mat-card-actions fxLayoutAlign="center">
               <button type="submit" mat-button [disabled]="f.invalid">Start</button>
