--- a/test/src/app/auth/login/login.component.html
+++ b/test/src/app/auth/login/login.component.html
@@ -12,8 +12,8 @@
         </mat-form-field>
 
 
-        <button *ngIf="!isLoading" type="submit" mat-raised-button color="primary" [disabled]="loginForm.invalid">Submit</button>
-        <mat-spinner *ngIf="isLoading"></mat-spinner>
+        <button *ngIf="!(isLoading$ | async)" type="submit" mat-raised-button color="primary" [disabled]="loginForm.invalid">Submit</button>
+        <mat-spinner *ngIf="(isLoading$ | async)"></mat-spinner>
     </form>
 </section>
 
