--- a/test/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/test/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -1,17 +1,17 @@
 <mat-nav-list>
-    <a mat-list-item routerLink="/signup" (click)="onSidenavClose()" *ngIf="!isAuth">
+    <a mat-list-item routerLink="/signup" (click)="onSidenavClose()" *ngIf="!(isAuth$ | async)">
       <mat-icon>face</mat-icon>
       <span class="nav-caption">Signup</span>
     </a>
-    <a mat-list-item routerLink="/login" (click)="onSidenavClose()" *ngIf="!isAuth">
+    <a mat-list-item routerLink="/login" (click)="onSidenavClose()" *ngIf="!(isAuth$ | async)">
       <mat-icon>login</mat-icon>
       <span class="nav-caption">Login</span>
     </a>
-    <a mat-list-item routerLink="/training" (click)="onSidenavClose()" *ngIf="isAuth">
+    <a mat-list-item routerLink="/training" (click)="onSidenavClose()" *ngIf="isAuth$ | async">
       <mat-icon>fitness_center</mat-icon>
       <span class="nav-caption">Training</span>
     </a>
-    <mat-list-item *ngIf="isAuth">
+    <mat-list-item *ngIf="isAuth$ | async">
       <button mat-icon-button (click)="onLogout()">
         <mat-icon>eject</mat-icon>
         <span class="nav-caption">Logout</span>
